--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -234,6 +234,7 @@
 
 .showcase {
   position: relative;
+  width: 100%;
   aspect-ratio: 1 / 1.05;
   max-width: 440px;
   justify-self: end;
